--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@ header {
     left: 0;
     display: flex;
     z-index: 99;
+    align-items: center;
 }  
 
 .migi{
@@ -48,9 +49,7 @@ header {
         }
     }
     .mypage {
-        margin-top:20px;
         width: 100px;
-        height: 100px;
         .btn btn btn-secondary text-white{
             width: 100px;
             height: 100px;
